--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
